--- a/readme
+++ b/readme
@@ -21,7 +21,7 @@ This repo holds the code for a snazzy Smart Home App UI. It's got everything you
 3. **Play Around**: Explore all the screens and features. It's like having a digital home control center!
 
 ## Sneak Peek 👀
-![image](https://github.com/Shivamgpt812/Animated-Portfolio/assets/144247614/bbcbb8c7-6fef-4c46-af40-0ff27891c4d2)
+[image](https://github.com/Shivamgpt812/Smart-Home-Controlling-Ui/assets/144247614/80657196-d630-43a2-874e-793632166f2f)
 
 ## Shoutouts 🙌
 
